[package]
name = "gatewaygamingbot"
version = "0.7.0"
authors = ["Antwan van Houdt <jabwd@exurion.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.116"
serde_json = "1.0.64"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "numeric", "chrono"] }
bb8 = "0.7.0"
async-trait = "0.1"
redis = { version = "0.20.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
async_ftp = { version = "5.0.0", features = ["secure"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.4"

[dependencies.serenity]
version = "0.10.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
